[FIX] sign: popover showing in wrong position
After migrating to Bootstrap 5, the popovers in sign started being shown at the
wrong position. This commit changes the offset of the popover to take that into
account.

opw-3239808

closes odoo/enterprise#38899

--- a/sign/static/src/scss/sign_backend.scss
+++ b/sign/static/src/scss/sign_backend.scss
@@ -205,7 +205,7 @@
     }
     
     .o_popover_offset {
-        top: 29px !important;
+        top: 162px !important;
         left: -4px !important #{"/*rtl:ignore*/"};
         left: 4px !important #{"/*rtl:remove*/"};
     }
